<resources>
    <string name="app_name">Agenda Online</string>


    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo electrónico</string>
    <string name="ContaseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>


    <!--ACTIVIDAD LOGIN-->
    <string name="IniciarSesionTXT">Iniciar sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes una cuenta?. Regístrate</string>

    <!--MENÚ PRINCIPAL-->
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="UidPrincipal"> -- </string>                         <!--Ui del usuario-->
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>

    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Archivados">Archivados</string>
    <string name="Perfil">Perfil</string>
    <string name="AcercaDe">Acerca De</string>

    <string name="CerrarSesion">Salir</string>

    <!---AGREGAR NOTA-->
    <string name="Uid_Usuario"> Uid del usuario</string>
    <string name="Correo_usuario">Correo de usuario</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo"> Título </string>
    <string name="Descripcion"> Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha"> 00/00/0000 </string>



    <string name="Estado"> No finalizado</string>

    <!--MENÚ-->
    <string name="Agregar_Nota_BD">Agregar</string>
    <string name="Actualizar_Nota_BD">Actualizar</string>


    <!--ITEM NOTA-->
    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item"> Uid del usuario</string>
    <string name="Correo_usuario_Item">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item"> Título </string>
    <string name="Descripcion_Item"> Descripcion</string>
    <string name="Fecha_Item"> 00/00/0000 </string>
    <string name="Estado_Item"> No finalizado</string>

    <!--CUADRO DE DIALOGO OPCIONES-->
    <string name="ElijaOpcionTXT">Elija una opción</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>


    <!--ACTUALIZAR NOTA-->
    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A"> Uid del usuario</string>
    <string name="Correo_usuario_A">Correo de usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A"> Título </string>
    <string name="Descripcion_A"> Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A"> 00/00/0000 </string>
    <string name="Estado_A">No finalizado</string>
    <string name="Estado_nuevo">--</string>


    <!--SPINNER -ESTADO-->
    <string-array name="Estados_nota">
        <item>"No finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>

</resources>